src/test/ui/error-codes/E0619.stderr
error[E0619]: the type of this value must be known in this context
  --> $DIR/E0619.rs:15:9
   |
15 |         (..) => {} //~ ERROR E0619
   |         ^^^^

error: aborting due to previous error

